readiness-liveness/config/ready-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ready-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ready
  sessionAffinity: None
  type: ClusterIP
